observability/pyrra/gen-output/pyrra-api.monitoring.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: monitoring
    app.kubernetes.io/name: pyrra-api
    app.kubernetes.io/part-of: pyrra
  name: pyrra-api
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: monitoring
      app.kubernetes.io/name: pyrra-api
      app.kubernetes.io/part-of: pyrra
  template:
    metadata:
      labels:
        app.kubernetes.io/component: monitoring
        app.kubernetes.io/name: pyrra-api
        app.kubernetes.io/part-of: pyrra
    spec:
      containers:
      - args:
        - api
        - --prometheus-url=http://prometheus-k8s.monitoring.svc.cluster.local:9090
        - --api-url=http://pyrra-kubernetes.monitoring.svc.cluster.local:9444
        image: ghcr.io/pyrra-dev/pyrra:pr-449
        name: pyrra-api
        ports:
        - containerPort: 9099
          name: http
        resources:
          limits:
            cpu: 200m
            memory: 250M
          requests:
            cpu: 100m
            memory: 50M
