observability/pyrra/gen-output/pyrra-api.monitoring.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: monitoring
    app.kubernetes.io/name: pyrra-api
    app.kubernetes.io/part-of: pyrra
  name: pyrra-api
  namespace: monitoring
spec:
  ports:
  - name: http
    port: 9099
  selector:
    app.kubernetes.io/component: monitoring
    app.kubernetes.io/name: pyrra-api
    app.kubernetes.io/part-of: pyrra
