observability/pyrra/gen-output/pyrra-kubernetes.monitoring.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: monitoring
    app.kubernetes.io/name: pyrra-kubernetes
    app.kubernetes.io/part-of: pyrra
  name: pyrra-kubernetes
  namespace: monitoring
spec:
  ports:
  - name: internal
    port: 9443
  - name: api
    port: 9444
  - name: metrics
    port: 8080
  selector:
    app.kubernetes.io/component: monitoring
    app.kubernetes.io/name: pyrra-kubernetes
    app.kubernetes.io/part-of: pyrra
